testdata/baselines/reference/compiler/moduleExportsInFunctionParamNamed.errors.txt
/dep.js(1,20): error TS7006: Parameter 'module' implicitly has an 'any' type.


==== /dep.js (1 errors) ====
    function something(module) {
                       ~~~~~~
!!! error TS7006: Parameter 'module' implicitly has an 'any' type.
        module.exports = 8;
    }
    
    export const foo = 7;
    
==== /main.ts (0 errors) ====
    import { foo } from "./dep.js";
    
    export const bar = foo + 1;
    